k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern-todo
  labels:
    app.kubernetes.io/name: mern-todo
    app.kubernetes.io/part-of: obsidian-cloud
